added error view

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,6 @@
-test=Test
 application.title=ADS
 view.home=Home
 view.unit=Units
 view.ticket=Tickets
+view.error=Error
+view.error.text=Could not find a view with that name. You most likely have an outdated link.
