added possibility to crud for units

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,6 +1,7 @@
 application.title=ADS
 view.home=Home
 view.unit=Units
+view.unit.deleteConfirmation=Are you sure you want to delete the entry?
 view.ticket=Tickets
 view.error=Error
 view.error.text=Could not find a view with that name. You most likely have an outdated link.
