added i18n where text was still hardcoded

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,7 +1,15 @@
 application.title=ADS
+form.save=Save
+form.cancel=Cancel
+form.delete=Delete
+confirm.caption=Confirm
+confirm.ok=OK
+confirm.cancel=Cancel
 view.home=Home
 view.unit=Units
 view.unit.deleteConfirmation=Are you sure you want to delete the entry?
+view.unit.unitTable.column.id=ID
+view.unit.unitTable.column.name=Name
 view.ticket=Tickets
 view.error=Error
 view.error.text=Could not find a view with that name. You most likely have an outdated link.
