changed entity attribute names

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -8,8 +8,10 @@ confirm.cancel=Cancel
 view.home=Home
 view.unit=Units
 view.unit.deleteConfirmation=Are you sure you want to delete the entry?
-view.unit.unitTable.column.id=ID
+view.unit.unitTable.column.code=ID
 view.unit.unitTable.column.name=Name
+view.unit.form.name=Name
+view.unit.form.code=Code
 view.ticket=Tickets
 view.error=Error
 view.error.text=Could not find a view with that name. You most likely have an outdated link.
