Testing polling with long running task. First try with CompletableFuture

--- a/src/main/resources/config/i18n/messages.properties
+++ b/src/main/resources/config/i18n/messages.properties
@@ -15,3 +15,4 @@ view.unit.form.code=Code
 view.ticket=Tickets
 view.error=Error
 view.error.text=Could not find a view with that name. You most likely have an outdated link.
+view.polling=Polling
