--- a/src/main/resources/config/i18n/messages.properties
+++ b/src/main/resources/config/i18n/messages.properties
@@ -17,3 +17,4 @@ view.ticket=Tickets
 view.error=Error
 view.error.text=Could not find a view with that name. You most likely have an outdated link.
 view.executeDetection=Execute Detection
+view.characteristics=Characteristics
